# communication_ipc

./: .gitignore  BUILD.gn  CODEOWNERS  Cargo.toml  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  config.gni  ohos.build  rustfmt.toml
config/: BUILD.gn
dbinder/test/unittest/: BUILD.gn  dbinder_base_invoker_unittest.cpp  dbinder_death_recipient_unittest.cpp  dbinder_remote_listener_unittest.cpp  dbinder_service_stub_mock.cpp  dbinder_service_stub_mock.h  dbinder_service_stub_unittest.cpp  dbinder_service_unittest.cpp  mock_dbinder_base_invoker.h
example/rust_test/client/: BUILD.gn
example/rust_test/client/src/: main.rs
example/rust_test/service/: BUILD.gn
example/rust_test/service/src/: access_token.rs  lib.rs
interfaces/innerkits/c/: BUILD.gn
interfaces/innerkits/c/dbinder/: BUILD.gn
interfaces/innerkits/c/ipc/: BUILD.gn
interfaces/innerkits/c_api/: BUILD.gn
interfaces/innerkits/c_api/include/: ipc_cparcel.h  ipc_cremote_object.h  ipc_cskeleton.h  ipc_error_code.h  ipc_inner_object.h  ipc_kit.h
interfaces/innerkits/cj/: BUILD.gn
interfaces/innerkits/cj/include/: ashmem_impl.h  ipc_ffi.h  ipc_skeleton_imp.h  ipc_utils_ffi.h  iremote_object_impl.h  message_sequence_impl.h  process_skeleton_impl.h  remote_object_holder_impl.h  remote_object_impl.h  remote_object_internal_impl.h  remote_proxy_holder_impl.h
interfaces/innerkits/cj/src/: ipc_ffi.cpp  ipc_skeleton_imp.cpp  ipc_utils_ffi.cpp  message_sequence_impl.cpp  remote_object_impl.cpp  remote_proxy_impl.cpp
interfaces/innerkits/ipc_core/: BUILD.gn  libipc_core_map
interfaces/innerkits/ipc_core/include/: ipc_file_descriptor.h  ipc_object_proxy.h  ipc_object_stub.h  ipc_payload_statistics.h  ipc_skeleton.h  ipc_types.h  iremote_broker.h  iremote_object.h  iremote_proxy.h  iremote_stub.h  jni_help.h  message_option.h  message_parcel.h  peer_holder.h
interfaces/innerkits/ipc_napi_common/: BUILD.gn
interfaces/innerkits/ipc_napi_common/include/: napi_calling_info.h  napi_remote_object.h
interfaces/innerkits/ipc_single/: BUILD.gn  libipc_single_map
interfaces/innerkits/libdbinder/: BUILD.gn
interfaces/innerkits/libdbinder/include/: dbinder_service.h  dbinder_service_stub.h  if_dbinder_service.h  rpc_system_ability_callback.h
interfaces/innerkits/rust/: BUILD.gn  Cargo.toml
interfaces/innerkits/rust/examples/: BUILD.gn  basic.rs
interfaces/innerkits/rust/include/: parcel_wrapper.h  remote_object_wrapper.h  skeleton_wrapper.h
interfaces/kits/cj/: BUILD.gn
interfaces/kits/ndk/: BUILD.gn  libipc_capi.json  libipc_ndk.json
ipc/test/: BUILD.gn
ipc/test/ipc/: BUILD.gn
ipc/test/ipc/client/: BUILD.gn  (+2 more)
ipc/test/rpc/: BUILD.gn
ipc/test/serializer/: BUILD.gn  utils_serializer_test.cpp
services/dbinder/test/: BUILD.gn  test_dbinder.py
test/: BUILD.gn
test/auxiliary/dl_softbus/: BUILD.gn
test/auxiliary/native/: BUILD.gn
test/distributedtest/: BUILD.gn  test_dbinder.py
test/distributedtest/include/: dbinder_service_test_helper.h  dbinder_test_service.h
test/distributedtest/src/: dbinder_distributed_test.cpp  dbinder_service_test_helper.cpp  dbinder_test_agent.cpp  dbinder_test_server_main.cpp  dbinder_test_service.cpp  dbinder_test_service_skeleton.cpp
test/example/small/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/c_lite/: BUILD.gn
test/fuzztest/dbinder_service/: BUILD.gn
test/ipc/: BUILD.gn
test/ipc/client/: BUILD.gn  client.c
test/ipc/samgr/: BUILD.gn  samgr.c
test/ipc/server/: BUILD.gn  server.c
test/moduletest/: BUILD.gn
test/moduletest/c/: ipc_capi_remote_object_module_test.cpp
test/moduletest/rpc/: BUILD.gn
test/resource/distributedtest/: ohos_test.xml
test/resource/fuzztest/: ohos_test.xml
test/resource/ipc/: ohos_test.xml
test/resource/moduletest/: ohos_test.xml
test/resource/services/: ohos_test.xml
test/resource/unittest/: ohos_test.xml
test/unittest/: BUILD.gn
test/unittest/c_lite/: BUILD.gn
test/unittest/common/: BUILD.gn  binder_debug_unittest.cpp  binder_invoker_unittest.cpp  buffer_object_unittest.cpp  comm_auth_info_unittest.cpp  databus_socket_listener_unittest.cpp  dbinder_callback_stub_unittest.cpp  dbinder_session_object_unittest.cpp  hitrace_invoker_unittest.cpp  invoker_factory_unittest.cpp  invoker_rawdata_unittest.cpp  ipc_binder_databus_invoker_unittest.cpp  ipc_block_thread_unittest.cpp  ipc_capi_parcel_unittest.cpp  ipc_capi_remote_object_unittest.cpp  ipc_capi_skeleton_unittest.cpp  ipc_connector_unittest.cpp  ipc_core_unittest.cpp  ipc_file_desc_unittest.cpp  ipc_hitrace_unittest.cpp  ipc_napi_unittest.cpp  ipc_object_proxy_unittest.cpp  ipc_payload_statistics_impl_unittest.cpp  ipc_payload_statistics_unittest.cpp  ipc_process_skeleton_unittest.cpp  ipc_skeleton_unittest.cpp  ipc_so_dlclose_unittest.cpp  ipc_thread_pool_unittest.cpp  ipc_thread_skeleton_unittest.cpp  ipc_trace_unittest.cpp  message_option_unittest.cpp  message_parcel_unittest.cpp  message_parcel_unittest_AcquireObject.cpp  mock_buffer_object.h  mock_dbinder_session_object.h  mock_iremote_invoker.h  mock_iremote_object.h  peer_holder_unittest.cpp  process_skeleton_unittest.cpp  rpc_feature_set_unittest.cpp  (+1 more)
test/unittest/dbinder_service/: BUILD.gn  dbinder_base_invoker_unittest.cpp  dbinder_death_recipient_unittest.cpp  dbinder_remote_listener_unittest.cpp  dbinder_sa_death_recipient_unittest.cpp  dbinder_service_death_recipient_unittest.cpp  dbinder_service_stub_unittest.cpp  dbinder_service_unittest.cpp  mock_dbinder_base_invoker.h  mock_dbinder_remote_listener.h
test/unittest/js/: BUILD.gn  NapiIRemoteProxy.js  NapiRemoteObjectTest.js  ipcActsRemoteObject002.js  ipcActsTaihe01.js  ipcActsTaihe02.js  ipcActsTaihe03.js  ipcActsTest01.js  ipcActsTest03.js  ipcActsTest04.js  ipcActsTestC.js  ipcActsTestE.js  ipcActsTestF.js  ipcActsTestG.js  ipcActstaihe06.js  ipcApiStageMessageSequence_001_030.js  ipcApiStageMessageSequence_0310_0600.js  ipcApiStageMessageSequence_1810_2100.js  ipcCapiTest.js  ipcTestA.js  ipcTestB.js  ipcTestC.js
test/unittest/mock/: mock_ipc_process_skeleton.h  mock_iremote_invoker.h  mock_iremote_object.h
(+1624 files in other folders)
