# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

IPC_ROOT_PATH = "//foundation/communication/ipc"
IPC_UNITTEST_ROOT_PATH = "$IPC_ROOT_PATH/test/unittest"

declare_args() {
  ipc_feature_rpc_enabled = false
  ipc_feature_test_enabled = false
  ipc_feature_trace_enabled = false
  resourceschedule_ffrt_support = false
  hiviewdfx_backtrace_support = false
  hiviewdfx_hisysevent_support = false
  ipc_proxy_dfx_backtrace_enabled = false
}

if (defined(global_parts_info) &&
    defined(global_parts_info.security_access_token)) {
  ipc_feature_test_enabled = true
}

if (defined(global_parts_info) &&
    defined(global_parts_info.resourceschedule_ffrt)) {
  resourceschedule_ffrt_support = true
}

if (defined(global_parts_info) &&
    defined(global_parts_info.hiviewdfx_faultloggerd)) {
  hiviewdfx_backtrace_support = true
}

if (defined(global_parts_info) &&
    defined(global_parts_info.hiviewdfx_hisysevent)) {
  hiviewdfx_hisysevent_support = true
}
