# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

SUBSYSTEM_DIR = "//foundation/communication/ipc"
IPC_TEST_ROOT = "//foundation/communication/ipc/ipc/test"

config("ipc_test_config") {
  include_dirs = [
    "//utils/native/base/include",
    "$IPC_TEST_ROOT/auxiliary/native/include",
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/ipc/native/src/mock/include",
  ]
}

#################################group#########################################
group("moduletest") {
  testonly = true
  deps = [ "moduletest/native:moduletest" ]
}
###############################################################################
