# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

SUBSYSTEM_DIR = "//foundation/communication/ipc"
DBINDER_TEST_ROOT = "$SUBSYSTEM_DIR/test"
MODULE_OUTPUT_PATH = "ipc/"

###############################################################################
config("testdbinder_config") {
  visibility = [ ":*" ]
  cflags = []
  if (is_standard_system) {
    cflags += [ "-DCONFIG_STANDARD_SYSTEM" ]
  }
  include_dirs = [
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/dbinder/dbinder_service/include",
    "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_core/include",
    "$DBINDER_TEST_ROOT/distributedtest/include",
  ]
}

ohos_distributedtest("DBinderTest") {
  testonly = true
  module_out_path = MODULE_OUTPUT_PATH

  sources = [
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_distributed_test.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_service_test_helper.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_service.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_service_skeleton.cpp",
  ]

  configs = [ ":testdbinder_config" ]

  deps = [
    ":dbinder_send",
    ":dbinder_test",
    "$SUBSYSTEM_DIR/interfaces/innerkits/libdbinder:libdbinder",
    "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_core:ipc_core",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "developer_test:distributedtest_lib",
    "googletest:gtest",
    "hilog:libhilog",
    "hitrace:libhitracechain",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "communication"
  resource_config_file = "$DBINDER_TEST_ROOT/resource/distributedtest/ohos_test.xml"
}

ohos_distributedtest("DBinderTestAgent") {
  module_out_path = MODULE_OUTPUT_PATH

  sources = [
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_service_test_helper.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_agent.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_service.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_service_skeleton.cpp",
  ]

  configs = [
    ":testdbinder_config",
    "$SUBSYSTEM_DIR/config:dsoftbus_header_deps_config",
  ]

  deps = [
    ":dbinder_send",
    ":dbinder_test",
    "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_core:ipc_core",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest",
    "hilog:libhilog",
    "hitrace:libhitracechain",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "communication"
  resource_config_file = "$DBINDER_TEST_ROOT/resource/distributedtest/ohos_test.xml"
}

###############################################################################
ohos_executable("dbinder_test") {
  sources = [
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_server_main.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_service.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_service_skeleton.cpp",
  ]

  configs = [ ":testdbinder_config" ]

  deps = [ "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_core:ipc_core" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:libhitracechain",
    "samgr:samgr_proxy",
  ]

  part_name = "ipc"
  subsystem_name = "communication"
}

ohos_executable("dbinder_send") {
  sources = [
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_server_main.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_service.cpp",
    "$DBINDER_TEST_ROOT/distributedtest/src/dbinder_test_service_skeleton.cpp",
  ]

  cflags_cc = [ "-DDBINDER_TEST_SECOND" ]

  configs = [ ":testdbinder_config" ]

  deps = [ "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_core:ipc_core" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:libhitracechain",
    "samgr:samgr_proxy",
  ]

  part_name = "ipc"
  subsystem_name = "communication"
}

ohos_distributedtest_py("DBinderTest_PY") {
  module_out_path = MODULE_OUTPUT_PATH
  sources = [ "test_dbinder.py" ]
}

###############################################################################
group("ipc_distributedtest") {
  testonly = true
  deps = [
    ":DBinderTest",
    ":DBinderTestAgent",
    ":dbinder_send",
    ":dbinder_test",
    ":DBinderTest_PY",
  ]
}
