# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//build/config/features.gni")

group("ipc_fuzztest") {
  testonly = true
  if (os_level == "standard") {
    deps = [
      "dbinder_service:ipc_dbinder_fuzztest",
      "interfaces/innerkits:ipc_innerkits_fuzztest",
      "ipc/native:ipc_native_fuzztest",
    ]
  } else {
    deps = [
      "c_lite:ipc_lite_fuzztest",
    ]
  }
}
