# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../config.gni")

#################################group#########################################
group("ipc_unittest") {
  testonly = true
  if (ipc_feature_test_enabled) {
    deps = [
      "dbinder/dbinder_service/src:ipc_dbinder_unittest",
      "ipc/native/src/c_api/source:ipc_capi_unittest",
      "ipc/native/src/core/source:ipc_core_unittest",
      "ipc/native/c/adapter/source:ipc_adapter_unittest"
    ]
  }
}
###############################################################################
