# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../config.gni")

#################################group#########################################
group("ipc_unittest") {
  testonly = true
  if (ipc_feature_test_enabled) {
    if (os_level == "standard") {
      deps = [
        "common:ipc_common_unittest",
        "dbinder_service:ipc_dbinder_unittest",
        "ipc/native:ipc_native_unittest"
      ]
    } else {
      deps = [
        "c_lite:ipc_lite_unittest",
      ]
    }
  }
}
###############################################################################
