# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

MODULE_OUTPUT_PATH = "ipc/example"

ohos_rust_unittest("example_rust_ipc_client") {
  module_out_path = MODULE_OUTPUT_PATH
  sources = [ "src/main.rs" ]
  deps = [
    "../../../interfaces/innerkits/rust:ipc_rust",
    "../service:example_calc_ipc_service",
  ]

  resource_config_file = "../../../test/resource/ipc/ohos_test.xml"

  subsystem_name = "communication"
  part_name = "ipc"
}
