# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_rust_shared_library("example_calc_ipc_service") {
  sources = [
    "src/access_token.rs",
    "src/lib.rs",
  ]

  deps = [ "../../../interfaces/innerkits/rust:ipc_rust" ]

  external_deps = [
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
  ]

  crate_name = "example_calc_ipc_service"
  crate_type = "dylib"

  subsystem_name = "communication"
  part_name = "ipc"
}
