# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("../../../config.gni")

declare_args() {
  enable_ipc_test = false
}

lite_component("rpc") {
  features = []
  if (ipc_feature_rpc_enabled) {
    features += [
      "ipc:rpc_manager",
      "dbinder:dbinder",
    ]
  }
  if (ohos_kernel_type != "liteos_m") {
    features += [ "ipc:ipc_single" ]
  }

  if (enable_ipc_test == true) {
    SUBSYSTEM_DIR = "//foundation/communication/ipc/ipc"
    features += [
      "$SUBSYSTEM_DIR/test/ipc:ipc_test",
      "$SUBSYSTEM_DIR/test/unittest/ipc:ipc_test_gtest",
      "$SUBSYSTEM_DIR/test/unittest/rpc:rpc_test_gtest",
    ]
  }
}
